removed flickering issues

--- a/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/admin.css" asp-append-version="true" />
+
+    <script>
+        try {
+            if (localStorage.getItem('sidebarCollapsed') === 'true') {
+                document.documentElement.classList.add('sidebar-collapsed-state');
+            }
+        } catch (e) { }
+    </script>
 </head>
 
 <body class="admin-body">
