--- a/WebApplication1/Views/Shared/_AdminLoginPartial.cshtml
+++ b/WebApplication1/Views/Shared/_AdminLoginPartial.cshtml
@@ -12,7 +12,7 @@
 
     <div class="dropdown dropup sidebar-user-profile">
         <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-            data-bs-toggle="dropdown" aria-expanded="false">
+            data-bs-toggle="dropdown" data-bs-container="body" data-bs-placement="top-end" aria-expanded="false">
             <img src="https://ui-avatars.com/api/?name=@(Uri.EscapeDataString(userName))&background=212529&color=fff" alt=""
                 width="32" height="32" class="rounded-circle me-2">
             <i class="bi bi-gear"></i>
